Make some yellow code green